# pfish_syslog

./: .gitignore  Makefile.am  README  bootstrap.sh  configure.ac  index.html  library_info.c  logger.c  pfish_syslog.c
pilot_fish/: syslog.h  syslog_macros.h
